src/main/java/fr/irit/module1/antlr4/MongoQueryParser.java
package fr.irit.module1.antlr4;// Generated from MongoQuery.g4 by ANTLR 4.13.0

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MongoQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, AGGREGATE=5, MATCH=6, PROJECT=7, LOOKUP=8, 
		DOT=9, COLON=10, COMMA=11, ASTERISK=12, LEFT_BRACES=13, RIGHT_BRACES=14, 
		LEFT_BRACKET=15, RIGHT_BRACKET=16, LEFT_PARENTHESES=17, RIGHT_PARENTHESES=18, 
		DQUOTE=19, SQUOTE=20, EQ=21, NEQ=22, GT=23, GTE=24, LT=25, LTE=26, IN=27, 
		NIN=28, AND=29, OR=30, NOT=31, NOR=32, BOOLEAN_TRUE=33, BOOLEAN_FALSE=34, 
		INTEGER_VALUE=35, DECIMAL_VALUE=36, IDENTIFIER=37, WS=38;
	public static final int
		RULE_query = 0, RULE_matchStage = 1, RULE_composedPredicate = 2, RULE_predicate = 3, 
		RULE_value = 4, RULE_projectStage = 5, RULE_fieldsProjection = 6, RULE_lookupStage = 7, 
		RULE_from = 8, RULE_localField = 9, RULE_foreignField = 10, RULE_as = 11, 
		RULE_field = 12, RULE_comparisonOperator = 13, RULE_logicalOperator = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "matchStage", "composedPredicate", "predicate", "value", "projectStage", 
			"fieldsProjection", "lookupStage", "from", "localField", "foreignField", 
			"as", "field", "comparisonOperator", "logicalOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'from'", "'localField'", "'foreignField'", "'as'", "'aggregate'", 
			"'$match'", "'$project'", "'$lookup'", "'.'", "':'", "','", "'*'", "'{'", 
			"'}'", "'['", "']'", "'('", "')'", "'\"'", "'''", "'$eq'", "'$ne'", "'$gt'", 
			"'$gte'", "'$lt'", "'$lte'", "'$in'", "'$nin'", "'$and'", "'$or'", "'$not'", 
			"'$nor'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "AGGREGATE", "MATCH", "PROJECT", "LOOKUP", 
			"DOT", "COLON", "COMMA", "ASTERISK", "LEFT_BRACES", "RIGHT_BRACES", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "LEFT_PARENTHESES", "RIGHT_PARENTHESES", "DQUOTE", "SQUOTE", 
			"EQ", "NEQ", "GT", "GTE", "LT", "LTE", "IN", "NIN", "AND", "OR", "NOT", 
			"NOR", "BOOLEAN_TRUE", "BOOLEAN_FALSE", "INTEGER_VALUE", "DECIMAL_VALUE", 
			"IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MongoQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MongoQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public Token collection;
		public TerminalNode DOT() { return getToken(MongoQueryParser.DOT, 0); }
		public TerminalNode AGGREGATE() { return getToken(MongoQueryParser.AGGREGATE, 0); }
		public TerminalNode LEFT_PARENTHESES() { return getToken(MongoQueryParser.LEFT_PARENTHESES, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MongoQueryParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MongoQueryParser.RIGHT_BRACKET, 0); }
		public TerminalNode RIGHT_PARENTHESES() { return getToken(MongoQueryParser.RIGHT_PARENTHESES, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MongoQueryParser.IDENTIFIER, 0); }
		public MatchStageContext matchStage() {
			return getRuleContext(MatchStageContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(MongoQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MongoQueryParser.COMMA, i);
		}
		public ProjectStageContext projectStage() {
			return getRuleContext(ProjectStageContext.class,0);
		}
		public List<LookupStageContext> lookupStage() {
			return getRuleContexts(LookupStageContext.class);
		}
		public LookupStageContext lookupStage(int i) {
			return getRuleContext(LookupStageContext.class,i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((QueryContext)_localctx).collection = match(IDENTIFIER);
			setState(31);
			match(DOT);
			setState(32);
			match(AGGREGATE);
			setState(33);
			match(LEFT_PARENTHESES);
			setState(34);
			match(LEFT_BRACKET);
			setState(36);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(35);
				matchStage();
				}
				break;
			}
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(38);
				match(COMMA);
				}
				break;
			}
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(41);
				projectStage();
				}
				break;
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(44);
				match(COMMA);
				}
			}

			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(47);
					lookupStage();
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(48);
						match(COMMA);
						}
					}

					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(56);
			match(RIGHT_BRACKET);
			setState(57);
			match(RIGHT_PARENTHESES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchStageContext extends ParserRuleContext {
		public List<TerminalNode> LEFT_BRACES() { return getTokens(MongoQueryParser.LEFT_BRACES); }
		public TerminalNode LEFT_BRACES(int i) {
			return getToken(MongoQueryParser.LEFT_BRACES, i);
		}
		public TerminalNode MATCH() { return getToken(MongoQueryParser.MATCH, 0); }
		public TerminalNode COLON() { return getToken(MongoQueryParser.COLON, 0); }
		public List<TerminalNode> RIGHT_BRACES() { return getTokens(MongoQueryParser.RIGHT_BRACES); }
		public TerminalNode RIGHT_BRACES(int i) {
			return getToken(MongoQueryParser.RIGHT_BRACES, i);
		}
		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class,i);
		}
		public List<ComposedPredicateContext> composedPredicate() {
			return getRuleContexts(ComposedPredicateContext.class);
		}
		public ComposedPredicateContext composedPredicate(int i) {
			return getRuleContext(ComposedPredicateContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MongoQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MongoQueryParser.COMMA, i);
		}
		public MatchStageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchStage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterMatchStage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitMatchStage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitMatchStage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchStageContext matchStage() throws RecognitionException {
		MatchStageContext _localctx = new MatchStageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_matchStage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(LEFT_BRACES);
			setState(60);
			match(MATCH);
			setState(61);
			match(COLON);
			setState(62);
			match(LEFT_BRACES);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 138512696320L) != 0)) {
				{
				{
				setState(65);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COLON:
				case IDENTIFIER:
					{
					setState(63);
					predicate();
					}
					break;
				case OR:
					{
					setState(64);
					composedPredicate();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(67);
					match(COMMA);
					}
				}

				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(RIGHT_BRACES);
			setState(76);
			match(RIGHT_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComposedPredicateContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(MongoQueryParser.OR, 0); }
		public TerminalNode COLON() { return getToken(MongoQueryParser.COLON, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MongoQueryParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MongoQueryParser.RIGHT_BRACKET, 0); }
		public List<TerminalNode> LEFT_BRACES() { return getTokens(MongoQueryParser.LEFT_BRACES); }
		public TerminalNode LEFT_BRACES(int i) {
			return getToken(MongoQueryParser.LEFT_BRACES, i);
		}
		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class,i);
		}
		public List<TerminalNode> RIGHT_BRACES() { return getTokens(MongoQueryParser.RIGHT_BRACES); }
		public TerminalNode RIGHT_BRACES(int i) {
			return getToken(MongoQueryParser.RIGHT_BRACES, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MongoQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MongoQueryParser.COMMA, i);
		}
		public ComposedPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composedPredicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterComposedPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitComposedPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitComposedPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComposedPredicateContext composedPredicate() throws RecognitionException {
		ComposedPredicateContext _localctx = new ComposedPredicateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_composedPredicate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(OR);
			setState(79);
			match(COLON);
			setState(80);
			match(LEFT_BRACKET);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LEFT_BRACES) {
				{
				{
				setState(81);
				match(LEFT_BRACES);
				setState(82);
				predicate();
				setState(83);
				match(RIGHT_BRACES);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(84);
					match(COMMA);
					}
				}

				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PredicateContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(MongoQueryParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(MongoQueryParser.COLON, i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode LEFT_BRACES() { return getToken(MongoQueryParser.LEFT_BRACES, 0); }
		public ComparisonOperatorContext comparisonOperator() {
			return getRuleContext(ComparisonOperatorContext.class,0);
		}
		public TerminalNode RIGHT_BRACES() { return getToken(MongoQueryParser.RIGHT_BRACES, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			field();
			setState(95);
			match(COLON);
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DQUOTE:
			case SQUOTE:
			case INTEGER_VALUE:
			case DECIMAL_VALUE:
			case IDENTIFIER:
				{
				setState(96);
				value();
				}
				break;
			case LEFT_BRACES:
				{
				setState(97);
				match(LEFT_BRACES);
				setState(98);
				comparisonOperator();
				setState(99);
				match(COLON);
				setState(100);
				value();
				setState(101);
				match(RIGHT_BRACES);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public Token raw;
		public TerminalNode IDENTIFIER() { return getToken(MongoQueryParser.IDENTIFIER, 0); }
		public List<TerminalNode> DQUOTE() { return getTokens(MongoQueryParser.DQUOTE); }
		public TerminalNode DQUOTE(int i) {
			return getToken(MongoQueryParser.DQUOTE, i);
		}
		public List<TerminalNode> SQUOTE() { return getTokens(MongoQueryParser.SQUOTE); }
		public TerminalNode SQUOTE(int i) {
			return getToken(MongoQueryParser.SQUOTE, i);
		}
		public TerminalNode INTEGER_VALUE() { return getToken(MongoQueryParser.INTEGER_VALUE, 0); }
		public TerminalNode DECIMAL_VALUE() { return getToken(MongoQueryParser.DECIMAL_VALUE, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_value);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DQUOTE:
			case SQUOTE:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==DQUOTE) {
						{
						setState(105);
						match(DQUOTE);
						}
					}

					}
					break;
				case 2:
					{
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SQUOTE) {
						{
						setState(108);
						match(SQUOTE);
						}
					}

					}
					break;
				}
				setState(113);
				((ValueContext)_localctx).raw = match(IDENTIFIER);
				setState(120);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==DQUOTE) {
						{
						setState(114);
						match(DQUOTE);
						}
					}

					}
					break;
				case 2:
					{
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SQUOTE) {
						{
						setState(117);
						match(SQUOTE);
						}
					}

					}
					break;
				}
				}
				break;
			case INTEGER_VALUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				((ValueContext)_localctx).raw = match(INTEGER_VALUE);
				}
				break;
			case DECIMAL_VALUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				((ValueContext)_localctx).raw = match(DECIMAL_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProjectStageContext extends ParserRuleContext {
		public List<TerminalNode> LEFT_BRACES() { return getTokens(MongoQueryParser.LEFT_BRACES); }
		public TerminalNode LEFT_BRACES(int i) {
			return getToken(MongoQueryParser.LEFT_BRACES, i);
		}
		public TerminalNode PROJECT() { return getToken(MongoQueryParser.PROJECT, 0); }
		public TerminalNode COLON() { return getToken(MongoQueryParser.COLON, 0); }
		public FieldsProjectionContext fieldsProjection() {
			return getRuleContext(FieldsProjectionContext.class,0);
		}
		public List<TerminalNode> RIGHT_BRACES() { return getTokens(MongoQueryParser.RIGHT_BRACES); }
		public TerminalNode RIGHT_BRACES(int i) {
			return getToken(MongoQueryParser.RIGHT_BRACES, i);
		}
		public ProjectStageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectStage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterProjectStage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitProjectStage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitProjectStage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectStageContext projectStage() throws RecognitionException {
		ProjectStageContext _localctx = new ProjectStageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_projectStage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LEFT_BRACES);
			setState(127);
			match(PROJECT);
			setState(128);
			match(COLON);
			setState(129);
			match(LEFT_BRACES);
			setState(130);
			fieldsProjection();
			setState(131);
			match(RIGHT_BRACES);
			setState(132);
			match(RIGHT_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldsProjectionContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(MongoQueryParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(MongoQueryParser.COLON, i);
		}
		public List<TerminalNode> BOOLEAN_TRUE() { return getTokens(MongoQueryParser.BOOLEAN_TRUE); }
		public TerminalNode BOOLEAN_TRUE(int i) {
			return getToken(MongoQueryParser.BOOLEAN_TRUE, i);
		}
		public List<TerminalNode> BOOLEAN_FALSE() { return getTokens(MongoQueryParser.BOOLEAN_FALSE); }
		public TerminalNode BOOLEAN_FALSE(int i) {
			return getToken(MongoQueryParser.BOOLEAN_FALSE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MongoQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MongoQueryParser.COMMA, i);
		}
		public FieldsProjectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldsProjection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).enterFieldsProjection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MongoQueryListener) ((MongoQueryListener)listener).exitFieldsProjection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MongoQueryVisitor) return ((MongoQueryVisitor<? extends T>)visitor).visitFieldsProjection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsProjectionContext fieldsProjection() throws RecognitionException {
		FieldsProjectionContext _localctx = new FieldsProjectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldsProjection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLON || _la==IDENTIFIER) {
				{
				{
				setState(134);
				field();
				setState(135);
				match(COLON);
				setState(136);
				_la = _input.LA(1);
				if ( !(_la==BOOLEAN_TRUE || _la==BOOLEAN_FALSE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(137);
					match(COMMA);
					}
				}

				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
